--- a/amplify.yml
+++ b/amplify.yml
@@ -10,9 +10,9 @@ applications:
           commands:
             - npm run build
       artifacts:
-        baseDirectory:  frontend/.next
+        baseDirectory: .next
         files:
           - '**/*'
       cache:
         paths:
-          -  frontend/node_modules/**/*
+          -  node_modules/**/*
