--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "frontend:dev": "cd frontend && npx next dev",
     "frontend:build": "cd frontend && npx next build",
     "frontend:start": "cd frontend && npx next start",
-    "frontend:lint": "cd frontend && npx next lint"
+    "frontend:lint": "cd frontend && npx next lint",
+    "backend:deploy": "cd backend && npx cdk deploy --all"
   },
   "workspaces": [
     "frontend",
